# resume

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: cd.yaml
cicd/: ubuntu.sh
cicd/cmake/: cd.cmake
src/: CMakeLists.txt  CV_Vladyslav_Rehan_en.tex  CV_Vladyslav_Rehan_ua.tex  bibliography.bib  cmake.tex.in  continuous_en.sh.in  continuous_ua.sh.in  defines.tex  document.tex  preamble.tex  resume_en.tex  resume_ua.tex  title.tex
src/content/appendencies/: appendencies.tex
src/content/chapter1/: chapter1.tex
src/content/chapter2/: chapter2.tex
src/content/chapter3/: chapter3.tex
src/content/chapter4/: chapter4.tex
src/content/chapter5/: chapter5.tex
